<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon_cost_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cost_of_service"
            app:layout_constraintBottom_toBottomOf="@+id/cost_of_service"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_baseline_store_mall_directory_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_hintText"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/service_question"
            app:layout_constraintBottom_toBottomOf="@+id/service_question"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_baseline_room_service_24" />

        <TextView
            android:id="@+id/service_question"
            android:layout_width="wrap_content"
            android:layout_margin="16dp"
            style="@style/Widget.TipTime.TextView"
            android:layout_height="wrap_content"
            android:text="@string/question_text"
            app:layout_constraintTop_toBottomOf="@+id/cost_of_service"
            app:layout_constraintLeft_toRightOf="@id/icon_service_question" />

        <RadioGroup
            android:id="@+id/tip_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/option_20"
            app:layout_constraintTop_toBottomOf="@+id/service_question"
            app:layout_constraintLeft_toLeftOf="@id/service_question"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/option_20"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstOption"/>

            <RadioButton
                android:id="@+id/option_18"
                android:layout_width="wrap_content"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_height="wrap_content"
                android:text="@string/secondOption"/>

            <RadioButton
                android:id="@+id/option_15"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thirdOption"/>
        </RadioGroup>

        <ImageView
            android:id="@+id/icon_round_tip_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/round_tip_switch"
            app:layout_constraintBottom_toBottomOf="@+id/round_tip_switch"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_baseline_call" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_tip_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.CompoundButton.Switch"
            android:checked="true"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tip_options"
            app:layout_constraintLeft_toRightOf="@id/icon_round_tip_switch"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/switch_button_text"/>

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/round_tip_switch"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/calculate_button"
            android:layout_margin="16dp"/>

        <TextView
            android:id="@+id/tip_result"
            android:layout_width="wrap_content"
            style="@style/Widget.TipTime.TextView"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/calculate_button"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="Tip Amount: $10"
            android:layout_margin="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


